fixed spacing issues

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -21,7 +21,7 @@ body {
   font-size: 24px;
 }
 
-main {
+/* .container {
   display: flex;
   flex-direction: column;
   background-color: #f4f1ec;
@@ -29,15 +29,20 @@ main {
   margin: 0;
   padding-left: 5%;
   padding-right: 5%;
-}
+} */
 
+.tweets-container {
+  display: flex;
+  flex-direction: column;
+  width: 90%
+}
 .tweet {
   display: flex;
   width: 80%;
   border: solid;
   border-width: 5px;
   justify-content: center;
-  margin: 3%;
+  margin: 3% 3% 0 3%;
 }
 
 .user-info {
